# EECS106a-Labs

joint_control/: package.xml  setup.py
lab0/src/bar/: package.xml  setup.py
lab0/src/foo/: package.xml  setup.py
lab1/my_chatter/: package.xml  setup.py
lab1/my_chatter/my_chatter/: __init__.py  my_listener.py  my_talker.py  talker.py
lab1/src/chatter/chatter/: publisher_member_function.py  subscriber_member_function.py
lab1/src/my_chatter_msgs/: .package.xml.swp  CMakeLists.txt  package.xml
lab1/src/my_chatter_msgs/msg/: TimestampString.msg
lab2/src/lab2_turtlesim/: package.xml  setup.py
lab2/src/lab2_turtlesim/lab2_turtlesim/: turtle_controller.py
lab2/src/lab2_turtlesim/scripts/: turtle_controller
lab2/src/turtle_patrol/turtle_patrol/: patrol_client.py  patrol_server.py
lab2/src/turtle_patrol_interface/: package.xml
lab3/src/forward_kinematics/: package.xml  setup.py
lab3/src/forward_kinematics/forward_kinematics/: forward_kinematics.py  kin_func_skeleton.py  listener.py  tf_echo.py
lab3_ur7e/src/joint_control/joint_control/: joint_pos_control.py  keyboard_controller copy.py  test_output.py
lab4/src/turtlebot_controller/turtlebot_controller/: turtlebot_control.py
lab4_maps/saved_maps/: slam_map.pgm  slam_map.yaml
lab5/: frames_2025-10-24_16.23.30.gv  frames_2025-10-24_17.02.16.gv  frames_2025-10-24_17.04.51.gv  frames_2025-10-24_17.05.10.gv  frames_2025-10-24_17.08.24.gv
lab5/src/perception/perception/: find_table_plane.py  process_pointcloud.py
lab5/src/planning/planning/: main.py  (+1 more)
lab6/src/mapping/: package.xml  setup.py
(+11 files in other folders)
